--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,13 @@
 		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css">
 		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
 		<link rel="stylesheet" type="text/css" href="lib/slickgrid/css/slick.grid.css">
+        <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
 
 		<!-- Custom Stylesheet -->
 		<link href="css/style.css" rel="stylesheet">
 
 		<!-- Directive styles -->
+		<link rel="stylesheet" type="text/css" href="css/directives/circularHeatForm.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/circularHeatChart.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/barchart.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/linechart.css">
@@ -236,6 +238,23 @@
 				</div>
 			</div>
 
+			<div gridster="gridsterOpts">
+			    <ul>
+			        <li gridster-item>
+			        	<div circular-heat-form></div>
+			        </li>
+			        <li gridster-item>
+			        	<tag-cloud tag-field="'hashtags'"></tag-cloud>
+			        </li>
+			        <li gridster-item>
+			        	<div heat-map class="well well-map"></div>
+			        </li>
+					<li gridster-item>
+			        	<tag-cloud tag-field="'hashtags'"></tag-cloud>
+			        </li>
+			    </ul>
+			</div>
+
             <div id="tooltip-container"></div>
 
 		</div>
@@ -254,6 +273,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 		-->
 		<script src="lib/angular/js/angular.min.js"></script>
+		<script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
 
 		<!-- Include third party libs -->
 		<script src="lib/d3/js/d3.min.js"></script>		
