Updating the jquery and bootstrap versions and correcting a CSS conflict with bootstrap affix plugin.

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 		<!-- Header -->
 		<!-- This could be made into either a directive or a partial -->
 		<nav role="navigation" class="navbar">
-			<div class="navbar-default navbar-static-top affix">
+			<div class="navbar-default navbar-static-top" data-spy="affix">
 				<div class="container">
 
 					<div powered-by-neon class="pull-right"></div>
