--- a/app/linechartWidget.html
+++ b/app/linechartWidget.html
@@ -8,7 +8,10 @@
 
 		<link type="image/png" rel="shortcut icon" href="img/Neon_16x16.png">
 
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.16.custom.css"> -->
+		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css">
+		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
 
 		<!-- Custom Stylesheet -->
 		<link href="css/style.css" rel="stylesheet">
@@ -29,44 +32,45 @@
 	<body ng-controller="neonDemoController">
 
 		<!-- Line chart -->
-        <div class="well chart-well">
+		<div class="well chart-well">
 
-            <div class="legend">
-                <div class="legend-item">
-                    <span class="legend-icon" style="background-color: #39b54a"></span>
-                    <span class="legend-text">Positive</span>
-                </div>
-                <div class="legend-item">
-                    <span class="legend-icon" style="background-color: #C2360D"></span>
-                    <span class="legend-text">Negative</span>
-                </div>
-            </div>
+			<div class="legend">
+				<div class="legend-item">
+					<span class="legend-icon" style="background-color: #39b54a"></span>
+					<span class="legend-text">Positive</span>
+				</div>
+				<div class="legend-item">
+					<span class="legend-icon" style="background-color: #C2360D"></span>
+					<span class="legend-text">Negative</span>
+				</div>
+			</div>
 
-            <div class="clearfix"></div>
+			<div class="clearfix"></div>
 
-            <linechart attr-x="xAxisField" attr-y="yAxisField" total-type='barType'></linechart>
+			<linechart attr-x="xAxisField" attr-y="yAxisField" total-type='barType'></linechart>
 
-        </div>
+		</div>
 
 		<!-- In production use:
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 		-->
 
+		<!-- Include the xdata logging package. -->
+		<script src="lib/xdatalogger/js/draper.activity_logger-2.1.1.js"></script>
+		<script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script>
+
 		 <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
 			  loaded first, angular should pick up the included jQuery. -->
-        <script src="lib/owf/owf-widget-debug.js"></script>
+		<script src="lib/owf/js/owf-widget-debug.js"></script>
 		<script src="/neon/js/neon.js"></script>
-        <script src="js/appConfig.js"></script>
+		<script src="js/appConfig.js"></script>
 
-        <!-- Include the xdata logging package. -->
-		<script src="lib/draperlab/draper.activity_logger-2.1.1.js"></script>
-
-		<script src="lib/jquery/jquery-1.11.0.min.js"></script>
-		<script src="lib/angular/angular.min.js"></script>
+		<script src="lib/jquery/js/jquery.min.js"></script>
+		<script src="lib/angular/js/angular.min.js"></script>
 
 		<!-- Include third party libs -->
-		<script src="lib/d3/d3.v3.min.js"></script>
-		<script src="lib/bootstrap/bootstrap.min.js"></script>
+		<script src="lib/d3/js/d3.min.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
 		<!-- Include required non-angular support modules -->
 		<script src="js/namespaces.js"></script>
@@ -75,50 +79,71 @@
 		<!-- Setup our widget's OWF handlers and trigger the angular code -->
 		<script type="text/javascript">
 			// -----------------------------------
-			// Initialize the close handlers. 
+			// Initialize the close handlers.
 			// -----------------------------------
 
-			OWF.ready(function () {	
+			OWF.ready(function () {
 
 				// -----------------------------------
-			    // Hide the body when the widget is not visible.
-			    // -----------------------------------
-			    var widgetState = Ozone.state.WidgetState.getInstance({
-			        onStateEventReceived: function(sender, msg) {
-			            var event = msg.eventName;
+				// Hide the body when the widget is not visible.
+				// -----------------------------------
+				var widgetState = Ozone.state.WidgetState.getInstance({
+					onStateEventReceived: function(sender, msg) {
+						var event = msg.eventName;
 
-			            if(event === 'activate' || event === 'show') {
-			                $(document.body).show();
-			            }
-			            else if(event === 'hide') {
-			                $(document.body).hide();
-			            }
-			        }
-			    });
+						if(event === 'activate' || event === 'show') {
+							$(document.body).show();
+						}
+						else if(event === 'hide') {
+							$(document.body).hide();
+						}
+					}
+				});
 
-			    // listen for  activate and hide events so that we can
-			    // hide our body.  Some browsers, specifically Chrome, continues
-			    // to render iframes with elments that use specific webkit transforms
-			    // even when they are hidden.  This impact many Map packages and some
-			    // SVG packages.  The work around for this is to hide our widget body
-			    // on hide events.
-			    widgetState.addStateEventListeners({
-			        events: ['activate', 'hide', 'show']
-			    });
-			    
-			    OWF.notifyWidgetReady();
+				// listen for  activate and hide events so that we can
+				// hide our body.  Some browsers, specifically Chrome, continues
+				// to render iframes with elments that use specific webkit transforms
+				// even when they are hidden.  This impact many Map packages and some
+				// SVG packages.  The work around for this is to hide our widget body
+				// on hide events.
+				widgetState.addStateEventListeners({
+					events: ['activate', 'hide', 'show']
+				});
+
+				OWF.notifyWidgetReady();
 			});
 
 			// Defaulting the Neon SERVER_URL to be under the neon context on the same host machine.
-	        // If the neon application is loaded elsewhere, this can be changed as in the following example:
-	        // neon.SERVER_URL = "http://localhost:8080/neon"
-	        neon.SERVER_URL = "/neon";
+			// If the neon application is loaded elsewhere, this can be changed as in the following example:
+			// neon.SERVER_URL = "http://localhost:8080/neon"
+			neon.SERVER_URL = "/neon";
 
 			var neonDemo = angular.module('neonDemo', [
 				'neonDemo.controllers',
 				'neonDemo.services',
-				'linechartDirective'
+				'linechartDirective',
+				'numberShortModule'
 			]);
+
+			angular.module('numberShortModule', [])
+			.filter('numberShort', function() {
+				return function(number) {
+					if(typeof number !== undefined) {
+						var abs = Math.abs(number);
+						if(abs >= Math.pow(10, 12)) {
+							number = (number / Math.pow(10, 12)).toFixed(1) + "T";
+						} else if(abs < Math.pow(10, 12) && abs >= Math.pow(10, 9)) {
+							number = (number / Math.pow(10, 9)).toFixed(1) + "B";
+						} else if(abs < Math.pow(10, 9) && abs >= Math.pow(10, 6)) {
+							number = (number / Math.pow(10, 6)).toFixed(1) + "M";
+						} else if(abs < Math.pow(10, 6) && abs >= Math.pow(10, 3)) {
+							number = (number / Math.pow(10, 3)).toFixed(1) + "K";
+						} else
+							number = Math.round(number * 100) / 100;
+					}
+					return number;
+				};
+			});
 
 		</script>
 
