--- a/app/queryResultsTableWidget.html
+++ b/app/queryResultsTableWidget.html
@@ -8,10 +8,11 @@
 
 		<link type="image/png" rel="shortcut icon" href="img/Neon_16x16.png">
 
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.16.custom.css"> -->
-		<link rel="stylesheet" type="text/css" href="css/ui-lightness/jquery-ui-1.10.4.min.css">
-		<link rel="stylesheet" type="text/css" href="css/slickgrid/slick.grid.css">
+		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css">
+		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
+		<link rel="stylesheet" type="text/css" href="lib/slickgrid/css/slick.grid.css">
 
 		<!-- Custom Stylesheet -->
 		<link href="css/style.css" rel="stylesheet">
@@ -38,32 +39,33 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 		-->
 
+		<!-- Include the xdata logging package. -->
+		<script src="lib/xdatalogger/js/draper.activity_logger-2.1.1.js"></script>
+		<script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script>
+
 		 <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
 			  loaded first, angular should pick up the included jQuery. -->
-        <script src="lib/owf/owf-widget-debug.js"></script>
+		<script src="lib/owf/js/owf-widget-debug.js"></script>
 		<script src="/neon/js/neon.js"></script>
-        <script src="js/appConfig.js"></script>
+		<script src="js/appConfig.js"></script>
 
-        <!-- Include the xdata logging package. -->
-		<script src="lib/draperlab/draper.activity_logger-2.1.1.js"></script>
-
-		<script src="lib/jquery/jquery-1.11.0.min.js"></script>
-		<script src="lib/angular/angular.min.js"></script>
+		<script src="lib/jquery/js/jquery.min.js"></script>
+		<script src="lib/angular/js/angular.min.js"></script>
 
 		<!-- Include third party libs -->
-		<script src="lib/d3/d3.v3.min.js"></script>
+		<script src="lib/d3/js/d3.min.js"></script>
 
-		<script src="lib/jquery/jquery.event.drag-2.2.js"></script>
-		<script src="lib/jquery/jquery.event.drop-2.2.js"></script>
+		<script src="lib/jquery.event.drag-drop/js/jquery.event.drag.js"></script>
+		<script src="lib/jquery.event.drag-drop/js/jquery.event.drop.js"></script>
 		<!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
-		<script src="lib/jquery/jquery-ui-1.10.4.min.js"></script>
-		<script src="lib/slickgrid/slick.core.js"></script>
-		<script src="lib/slickgrid/slick.grid.js"></script>
-		<script src="lib/slickgrid/slick.dataview.js"></script>
-		<script src="lib/mergesort/merge-sort.js"></script>
-		<script src="lib/slickgrid/plugins/slick.autotooltips.js"></script>
-		<script src="lib/slickgrid/plugins/slick.rowselectionmodel.js"></script>
-		<script src="lib/bootstrap/bootstrap.min.js"></script>
+		<script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
+		<script src="lib/slickgrid/js/slick.core.js"></script>
+		<script src="lib/slickgrid/js/slick.grid.js"></script>
+		<script src="lib/slickgrid/js/slick.dataview.js"></script>
+		<script src="lib/mergesort/js/merge-sort.js"></script>
+		<script src="lib/slickgrid/js/slick.autotooltips.js"></script>
+		<script src="lib/slickgrid/js/slick.rowselectionmodel.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
 		<!-- Include required non-angular support modules -->
 		<script src="js/namespaces.js"></script>
@@ -73,10 +75,10 @@
 		<script type="text/javascript">
 
 			// Defaulting the Neon SERVER_URL to be under the neon context on the same host machine.
-	        // If the neon application is loaded elsewhere, this can be changed as in the following example:
-	        // neon.SERVER_URL = "http://localhost:8080/neon"
-	        neon.SERVER_URL = "/neon";
-	        
+			// If the neon application is loaded elsewhere, this can be changed as in the following example:
+			// neon.SERVER_URL = "http://localhost:8080/neon"
+			neon.SERVER_URL = "/neon";
+
 			var neonDemo = angular.module('neonDemo', [
 				'neonDemo.controllers',
 				'neonDemo.services',
