--- a/app/index.html
+++ b/app/index.html
@@ -134,12 +134,14 @@
         <div class="container">
 
             <!-- Timeline -->
-            <div timeline-selector></div>
+            <!-- <div timeline-selector></div> -->
 
-            <div data-gridster>
+            <div gridster="gridsterOpts">
                 <ul>
-                    <li data-gridster-item data-row="visualization.position[0]" data-col="visualization.position[1]" data-sizex="visualization.size.x" data-sizey="visualization.size.y" ng-repeat="visualization in visualizations">
-                        <div class="well" visualization-widget 
+                    <!-- <li data-gridster-item data-row="visualization.position[0]" data-col="visualization.position[1]" data-sizex="visualization.size.x" data-sizey="visualization.size.y" ng-repeat="visualization in visualizations"> -->
+                    <li gridster-item="visualization" ng-repeat="visualization in visualizations">
+                        <div class="well visualization-widget" visualization-widget 
+                            gridster-config="visualization"
                             visualization="{{visualization.type}}" 
                             bindings="{{visualization.bindings}}"></div>
                     </li>
@@ -209,14 +211,14 @@
                             </div>
 
                             <!-- Line chart -->
-                            <linechart chart-type="chartType" ng-hide="chartType != 'line'"></linechart>
+                            <!-- <linechart chart-type="chartType"></linechart> -->
 
                         </div>
 
                         <div class="col-lg-12 col-xxl-6">
 
                             <!-- Map -->
-                            <div heat-map class="well well-map"></div>
+                            <!-- <div heat-map class="well well-map"></div> -->
                             
                         </div>
 
@@ -232,14 +234,14 @@
                         <div class="col-lg-12 col-xxl-6">
 
                             <!-- Tag cloud -->
-                            <tag-cloud tag-field="'hashtags'"></tag-cloud>
+                            <!-- <tag-cloud tag-field="'hashtags'"></tag-cloud> -->
 
                         </div>
 
                         <div class="col-lg-12 col-xxl-6">
 
                             <!-- Circular heat chart -->
-                            <div circular-heat-form></div>
+                            <!-- <div circular-heat-form></div> -->
 
                         </div>
 
@@ -267,6 +269,7 @@
         -->
         <script src="lib/angular/js/angular.min.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
+        <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
 
         <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>     
