--- a/app/index.html
+++ b/app/index.html
@@ -136,12 +136,13 @@
             <!-- Timeline -->
             <!-- <div timeline-selector></div> -->
 
-            <div gridster="gridsterOpts">
+            <div gridster="gridsterOpts" id="gridster-div">
                 <ul>
                     <!-- <li data-gridster-item data-row="visualization.position[0]" data-col="visualization.position[1]" data-sizex="visualization.size.x" data-sizey="visualization.size.y" ng-repeat="visualization in visualizations"> -->
                     <li gridster-item="visualization" ng-repeat="visualization in visualizations">
-                        <div class="well visualization-widget" visualization-widget 
+                        <div class="well" visualization-widget
                             gridster-config="visualization"
+                            ng-class="(isInMobileMode())? 'visualization-widget-mobile' : 'visualization-widget'"
                             visualization="{{visualization.type}}" 
                             bindings="{{visualization.bindings}}"></div>
                     </li>
