--- a/app/barchartWidget.html
+++ b/app/barchartWidget.html
@@ -32,43 +32,8 @@
 	<body ng-controller="neonDemoController">
 
 		<!-- Bar chart -->
-		<div class="well">
-			<div class="chart-options pull-right">
-				<a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target="#chart-options" data-animation=false>
-				  <span class="glyphicon glyphicon-cog"></span>
-				  <span class="caret"></span>
-				</a>
-				<div id="chart-options" class="popover bottom">
-					<div class="arrow"></div>
-					<div class="popover-content">
-						<div class="form-group">
-							<fieldselector target-var="xAxisField" label-text="'X axis:'" default-mapping="'bar_x_axis'"></fieldSelector>
-						</div>
-						<div class="form-group">
-							<fieldselector target-var="yAxisField" label-text="'Y axis:'" default-mapping="'y_axis'"></fieldSelector>
-						</div>
-						<div class="form-group">
-							<select ng-model="barType" class="form-control">
-								<option value="count">Count</option>
-								<option value="sum">Sum</option>
-								<option value="avg">Avg</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="legend">
-				<div class="legend-item">
-					<span class="legend-icon" style="background-color: #39b54a"></span>
-					<span class="legend-text">{{yAxisField}} {{barType}}</span>
-				</div>
-			</div>
-
-			<div class="clearfix"></div>
-
+		<div class="well visualization-widget">
 			<barchart attr-x="xAxisField" attr-y="yAxisField" bar-type='barType'></barchart>
-
 		</div>
 
 		<!-- In production use:
@@ -86,6 +51,7 @@
 		<script src="js/appConfig.js"></script>
 
 		<script src="lib/jquery/js/jquery.min.js"></script>
+		<script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
 		<script src="lib/angular/js/angular.min.js"></script>
 
 		<!-- Include third party libs -->
@@ -141,8 +107,12 @@
 			var neonDemo = angular.module('neonDemo', [
 				'neonDemo.controllers',
 				'neonDemo.services',
-				'barchartDirective'
+				'neonDemo.directives',
 			]);
+
+			angular.module('neonDemo.directives', []);
+			angular.module('neonDemo.controllers', []);
+			angular.module('neonDemo.services', []);
 
 		</script>
 
@@ -150,6 +120,6 @@
 		<script src="js/connectionService.js"></script>
 		<script src="js/filterCountService.js"></script>
 		<script src="js/neonDemoController.js"></script>
-		<script src="js/directives/barchartDirective.js"></script>
+		<script src="js/directives/barchart.js"></script>
 	</body>
 </html>
