Count by styling

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 		<link rel="stylesheet" type="text/css" href="css/directives/addVisualization.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/circularHeatForm.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/circularHeatChart.css">
+		<link rel="stylesheet" type="text/css" href="css/directives/countBy.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/barchart.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/linechart.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/stackedBarChart.css">
