NEON-1276: Added a missing javascript file to the widget to correct some missing controls..

--- a/app/barchartWidget.html
+++ b/app/barchartWidget.html
@@ -121,5 +121,6 @@
 		<script src="js/filterCountService.js"></script>
 		<script src="js/neonDemoController.js"></script>
 		<script src="js/directives/barchart.js"></script>
+		<script src="js/directives/fieldSelector.js"></script>
 	</body>
 </html>
