--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 		<link rel="stylesheet" type="text/css" href="css/directives/heatMap.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/queryResultsTable.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/tagCloud.css">
+		<link rel="stylesheet" type="text/css" href="css/directives/visualizationWidget.css">
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
