Updating widget dependencies on jquery.event.drag-drop library due to recent change to threedubmedia.jquery.event in bower.

--- a/app/queryResultsTableWidget.html
+++ b/app/queryResultsTableWidget.html
@@ -55,8 +55,8 @@
         <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>
 
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drag.js"></script>
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drop.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
         <!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
         <script src="lib/slickgrid/js/slick.core.js"></script>
