--- a/app/countByWidget.html
+++ b/app/countByWidget.html
@@ -54,8 +54,8 @@
         <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drag.js"></script>
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drop.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
         <script src="lib/slickgrid/js/slick.core.js"></script>
         <script src="lib/slickgrid/js/slick.grid.js"></script>
