--- a/app/tagCloudWidget.html
+++ b/app/tagCloudWidget.html
@@ -56,8 +56,8 @@
         <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>
         <script src="lib/jquery.tagcloud/js/jquery.tagcloud.js"></script>
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drag.js"></script>
-        <script src="lib/jquery.event.drag-drop/js/jquery.event.drop.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
+        <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
         <!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
