NEON-1339 NEON-1340 Users can now add a View Data visualization to their Neon dashboard, mirroring the functionality of the View Data navbar item and created using the same code.  Included a temporary icon for display in the Add Visualization popup.

--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
             <div filter-builder></div>
 
             <!-- See Data tray -->
-            <div query-results-table show-data="seeData"></div>
+            <div query-results-table collapsable="true" show-data="seeData"></div>
 
             <!-- Query Builder tray -->
             <!-- <div>
