Add support for monthly granularity in the timeline
* Extract code that calculates hour/day buckets from dates and back
* Add corresponding code for month buckets
* Add unit tests for that code
* Add Month to the granularity options on the timeline
* Fix rendering problems resulting from month bars not being the same width

--- a/app/index.html
+++ b/app/index.html
@@ -231,6 +231,8 @@
         <script src="js/directives/queryResultsTable.js"></script>
         <script src="js/directives/stackedBarchart.js"></script>
         <script src="js/directives/tagCloud.js"></script>
+        <script src="js/directives/dateBucketizer.js"></script>
+        <script src="js/directives/monthBucketizer.js"></script>
         <script src="js/directives/timelineSelectorChart.js"></script>
         <script src="js/directives/timelineSelector.js"></script>
         <script src="js/directives/visualizationWidget.js"></script>
