NEON-1355 The Error Notification Service now uses the superior Bootstrap Notify library to display notifications instead of the limited notifyjs.  Error notifications are working correctly.

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
         <link rel="stylesheet" type="text/css" href="js/vendor/slick-grid/css/slick.grid.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
 
-        <!-- Custom Stylesheet -->
+        <!-- Custom Stylesheets -->
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/errorStyle.css" rel="stylesheet">
 
         <!-- Directive styles -->
         <link rel="stylesheet" type="text/css" href="css/directives/addVisualization.css">
@@ -206,8 +207,8 @@
         <script src="js/vendor/slick-grid/js/slick.autotooltips.js"></script>
         <script src="js/vendor/slick-grid/js/slick.rowselectionmodel.js"></script>
         <script src="lib/mergesort/js/merge-sort.js"></script>
-        <script src="lib/notifyjs/js/notify-combined.min.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
 
         <!-- Include required non-angular support modules -->
         <script src="js/neon-extensions/filtertable.js"></script>
@@ -249,8 +250,5 @@
         <script src="js/directives/visualizationWidget.js"></script>
         <script src="js/directives/sunburst.js"></script>
         <script src="js/directives/arrayTextForm.js"></script>
-
-        <!-- Must follow inclusion of notifyjs script -->
-        <link href="css/errorStyle.css" rel="stylesheet">
     </body>
 </html>
