NEON-1355 Renamed the JS file for the Error Notification Service to copy the naming standards for the existing services.

--- a/app/index.html
+++ b/app/index.html
@@ -223,7 +223,7 @@
         <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
         <script src="js/connectionService.js"></script>
-        <script src="js/errors/error.js"></script>
+        <script src="js/errorNotificationService.js"></script>
         <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
