Fixing graph to work with twitter friends and followers

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" type="text/css" href="css/directives/circularHeatChart.css">
         <link rel="stylesheet" type="text/css" href="css/directives/countBy.css">
         <link rel="stylesheet" type="text/css" href="css/directives/barchart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/directedGraph.css">
         <link rel="stylesheet" type="text/css" href="css/directives/linechart.css">
         <link rel="stylesheet" type="text/css" href="css/directives/stackedBarChart.css">
         <link rel="stylesheet" type="text/css" href="css/directives/timelineSelector.css">
@@ -224,6 +225,7 @@
         <script src="js/directives/circularHeatForm.js"></script>
         <script src="js/directives/countBy.js"></script>
         <script src="js/directives/databaseConfig.js"></script>
+        <script src="js/directives/directedGraph.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
         <script src="js/directives/fieldSelector.js"></script>
         <script src="js/directives/heatMap.js"></script>
