Cleaning up graph visualization

--- a/app/index.html
+++ b/app/index.html
@@ -205,6 +205,7 @@
         <script src="js/neon-extensions/filtertable.js"></script>
         <script src="js/namespaces.js"></script>
         <script src="js/charts/barchart.js"></script>
+        <script src="js/charts/directedGraph.js"></script>
         <script src="js/charts/linechart.js"></script>
         <script src="js/charts/timelineSelectorChart.js"></script>
         <script src="js/coremap/coremap.js"></script>
